src/objects/Country_Geography_Hierarchy__c.object
<CustomObject>
    <description>Motorola country, subregion &amp; region geography hierarchy</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <externalId>true</externalId>
        <label>Country Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lenovo_GEO__c</fullName>
        <label>Lenovo GEO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lenovo_Region__c</fullName>
        <label>Lenovo Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <label>Region Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subregion_Code__c</fullName>
        <label>Subregion Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <label>Subregion</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Country Geography Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Geography Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>